--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
+body {
+		background-color: #EAF6F6;
+	}
 
+h1, h3 {
+	color: #66BFBF;
+}
+hr {
+		border-style: none;
+		border-top-style: dotted;
+		/*height: 0px;*/
+		width: 5%;
+		border-color: grey;
+		border-width: 5px;
+	}
+	
 
 img {
+		border-radius: 100%;
+	}
+	
+
+/*img {
 	border-radius: 100%;
-}
+}*/
